add distributed version